2002-05-12  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSGState.m (-DPSsetalpha:): Call setColor:state:.
	Clamp value to 0<x<1
	(-DPSsetcmykcolor::::): Idem.
	(-DPSsetgray:):Idem.
	(-DPSsethsbcolor:::):Idem.
	(-DPSsetrgbcolor:::):Idem.
	(-GSSetFontSize:): Use given size.
	(-initWithDrawContext:): Set initial alpha to 1.
	* Source/gsc/gscolors.c (gsHSBToRGB): Fix for h==1.
	(gsColorToCMYK): Implement.
	(gsColorToHSB): Idem. (Patches from alexander@malmberg.org).

	* Source/xlib/XGFontManager.m (load_cache): Use NSBundle to find
	font_cacher.

	* Source/xlib/XGGState.m (GSSetFont:) Rename from setFont.

	* Tools/GNUmakefile: Build font_cacher if BUILD_GRAPHICS=xlib

2002-05-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Source/xlib/XGFont.m: ([-xCharStructForGlyph:]) use newer
	GSGFromUnicode() API.

2002-05-09  Adam Fedor  <fedor@gnu.org>

	* Headers/gsc/GSGState.h: Add color and text ivars.
	* Headers/winlib/WIN32GState.h: Idem.
	* Headers/xlib/XGGState.h: Idem.

	* Source/gsc/GSContext.m: Implement font/text methods.
	* Source/gsc/GSGState.m (-setColor:state:) Implement
	Implement color DPS and GS ops to use it.
	Implement text/font ops.

	* Source/winlib/WIN32GState.m (-setColor:state:) Implement.
	Remove color ops (now in GSGState)

	* Source/xlib/XGGState.m (-setColor:state:) Implement.
	(-setAlphaColor:) New.
	Remove color ops (now in GSGState)

2002-05-07  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSStreamContext.m (-GSSetFont:): Don't flip
	the font for a flipped view.

2002-05-06  Adam Fedor  <fedor@gnu.org>

	* configure.ac (BUILD_SERVER): Set to predefined define
	* Source/GSBackend.m: Use it.

2002-05-05  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Simplify backend selection using --enable-server
	and --enable-graphics. Add --with-library-flags and
	--with-include-flags for adding additonal flags. Revert last
	change to XShm.h test. Add check for art libraries.
	* Source/GNUmakefile: Conform to new configure output
	* Source/GSBackend.m: Idem.